# pyDot2Dot

./: .gitignore  README.md  app_launcher.cpp  build_script.py  dot2dot.py  dot_2_dot.py  dot_2_dot_gui.py  main.py  metadata.py  processing.py  pyDot2Dot.sublime-project  requirements.txt  setup.py  utils.py
app_launcher/: CMakeLists.txt  app_launcher.cpp  app_launcher.rc  app_launcher.res  build.ps1
assets/config/: config_default.json  metadata.json
config/: .gitignore  config_default.json  metadata.json
documentations/: software.md  tutorial.md
dot2dot/: default_scheme_config.py  dot.py  dot_label.py  dots_config.py  dots_exporter.py  dots_saver.py  dots_selection.py  grid_dots.py  image_creation.py  image_discretization.py  load_config.py  main.py  metadata.py  processing.py  requirements.txt  utils.py
dot2dot/gui/: aspect_settings_window.py  display_window_base.py  disposition_dots_window.py  dot_selection_popup.py  edit_window.py  error_window.py  image_canvas.py  main_gui.py  menu_bar.py  message_box_href.py  multiple_contours_window.py  settings_window.py  shape_vis_window.py  utilities_gui.py
dot2dot/test/: test_density_placed.py
gui/: edit_window.py  image_canvas.py  main_gui.py  tooltip.py
src/: config.py  dot.py  dot_2_dot.py  dot_label.py  dots_config.py  dots_saver.py  dots_selection.py  grid_dots.py  image_creation.py  image_discretization.py  load_config.py  main.py  metadata.py  processing.py  requirements.txt  utils.py
src/gui/: __init__.py  aspect_settings_window.py  disposition_dots_window.py  dot_label_aspect_window.py  edit_window.py  (+9 more)
